crates/rv/tests/integration_tests/ruby/snapshots/integration_tests__ruby__list_test__ruby_list_json_output_with_rubies.snap
---
source: crates/rv/tests/integration_tests/ruby/list_test.rs
expression: output.normalized_stdout()
---
[
  {
    "Installed": {
      "key": "ruby-3.1.4-macos-aarch64",
      "version": "ruby-3.1.4",
      "path": "/tmp/home/.local/share/rv/rubies/ruby-3.1.4",
      "managed": true,
      "arch": "aarch64",
      "os": "macos",
      "gem_root": null
    },
    "active": false
  },
  {
    "Installed": {
      "key": "ruby-3.2.0-macos-aarch64",
      "version": "ruby-3.2.0",
      "path": "/tmp/home/.local/share/rv/rubies/ruby-3.2.0",
      "managed": true,
      "arch": "aarch64",
      "os": "macos",
      "gem_root": null
    },
    "active": true
  }
]
