crates/rv/tests/integration_tests/ruby/snapshots/integration_tests__ruby__list_test__ruby_list_ruby_3_5_is_skipped.snap
---
source: crates/rv/tests/integration_tests/ruby/list_test.rs
expression: output.normalized_stdout()
---
[
  {
    "Remote": {
      "key": "ruby-4.0.0-macos-aarch64",
      "version": "ruby-4.0.0",
      "arch": "aarch64",
      "os": "macos"
    },
    "active": true
  }
]
