crates/rv/tests/integration_tests/ruby/snapshots/integration_tests__ruby__list_test__ruby_list_shows_requested_ruby_even_if_not_installed_and_not_a_latest_patch.snap
---
source: crates/rv/tests/integration_tests/ruby/list_test.rs
expression: output.normalized_stdout()
---
[
  {
    "Remote": {
      "key": "ruby-3.4.7-macos-aarch64",
      "version": "ruby-3.4.7",
      "arch": "aarch64",
      "os": "macos"
    },
    "active": true
  },
  {
    "Remote": {
      "key": "ruby-3.4.8-macos-aarch64",
      "version": "ruby-3.4.8",
      "arch": "aarch64",
      "os": "macos"
    },
    "active": false
  }
]
