crates/rv/tests/integration_tests/ruby/snapshots/integration_tests__ruby__list_test__ruby_list_with_available_and_installed.snap
---
source: crates/rv/tests/integration_tests/ruby/list_test.rs
expression: output.normalized_stdout()
---
* ruby-3.1.4 [installed] /opt/rubies/ruby-3.1.4/bin/ruby
  ruby-3.4.5 [available]
