crates/rv/tests/integration_tests/ruby/snapshots/integration_tests__ruby__list_test__ruby_list_with_available_and_installed_with_same_minor_lists_all_versions.snap
---
source: crates/rv/tests/integration_tests/ruby/list_test.rs
expression: output.normalized_stdout()
---
[
  {
    "Installed": {
      "key": "ruby-3.4.0-macos-aarch64",
      "version": "ruby-3.4.0",
      "path": "/tmp/home/.local/share/rv/rubies/ruby-3.4.0",
      "managed": true,
      "arch": "aarch64",
      "os": "macos",
      "gem_root": null,
      "enable_shared": false,
      "rubygems_platform": "aarch64-darwin23"
    },
    "active": true
  },
  {
    "Remote": {
      "key": "ruby-3.4.1-macos-aarch64",
      "version": "ruby-3.4.1",
      "arch": "aarch64",
      "os": "macos"
    },
    "active": false
  }
]
